[gd_scene load_steps=3 format=3 uid="uid://d1acvw8yuubxo"]

[ext_resource type="Script" path="res://addons/rmsmartshape/scenes/SnapPopup.gd" id="1"]
[ext_resource type="Theme" uid="uid://dud4fe6fsicvm" path="res://addons/rmsmartshape/assets/gui_theme.res" id="1_6ft7o"]

[node name="SnapPopup" type="PopupPanel"]
size = Vector2i(301, 128)
visible = true
theme = ExtResource("1_6ft7o")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 12.0
offset_top = 12.0
offset_right = 289.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Configure Snap"

[node name="SnapOffset" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/SnapOffset"]
layout_mode = 2
text = "Grid Offset:"

[node name="SnapOffsetX" type="SpinBox" parent="VBoxContainer/SnapOffset"]
unique_name_in_owner = true
layout_mode = 2
suffix = "px"

[node name="SnapOffsetY" type="SpinBox" parent="VBoxContainer/SnapOffset"]
unique_name_in_owner = true
layout_mode = 2
suffix = "px"

[node name="SnapStep" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/SnapStep"]
layout_mode = 2
text = "Grid Step:  "

[node name="SnapStepX" type="SpinBox" parent="VBoxContainer/SnapStep"]
unique_name_in_owner = true
layout_mode = 2
value = 8.0
suffix = "px"

[node name="SnapStepY" type="SpinBox" parent="VBoxContainer/SnapStep"]
unique_name_in_owner = true
layout_mode = 2
value = 8.0
suffix = "px"
